<resources>
    <string name="app_name">Weather App</string>
    <string name="favorite">Favorite</string>
    <string name="weather">Weather</string>
    <string name="current">Current</string>


    <string name="error_occurred">An Error has occurred</string>
    <string name="error_network">Connection error occurred</string>
    <string name="error_unknown">Unknown error, please try again</string>
    <string name="error_server">Server error, please try again later</string>
    <string name="no_favorites_added">No favorites added</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="no_result_matching">Nothing found matching your query</string>
    <string name="search_result_here">Your search results will appear here</string>
    <string name="content_desc_favorite_a_city">Favorite a city</string>
    <string name="favorite_cities_label">Favorite Cities</string>
    <string name="weather_label">Weather</string>
    <string name="search_label">Search Cities</string>
    <!-- Preference Titles -->
    <string name="options_header">Options</string>
    <string name="notifications_header">Notifications</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="temp_scale_title">Temperature Scale</string>
    <string name="temp_celsius">Celsius</string>
    <string name="temp_fahrenheit">Fahrenheit</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="daily_weather_notification_title">Daily Weather</string>
    <string name="daily_weather_summary_on">Get a weather notification everyday at 6:00 AM</string>
    <string name="daily_weather_summary_off">Get a weather notification everyday at 6:00 AM</string>
    <string name="settings_label">Settings</string>

    <string name="temp_scale_key" translatable="false">temp_scale</string>
    <string name="daily_weather_notification_key" translatable="false">daily_weather_notification</string>
    <string name="location_not_available">Location not available</string>
    <string name="todays_weather">Today\'s weather</string>
    <string name="weather_channel_name">Weather</string>
    <string name="retry">retry</string>
    <string name="humidity_value">"Humidity: %d%%"</string>
    <string name="wind_speed_value">"Wind Speed: %.0f %s"</string>
    <string name="meter_second">meter/second</string>
    <string name="miles_hour">miles/hour</string>
    <string name="location_permission_rationale">To get Local weather, allow location permission in the Settings</string>
    <string name="allow_location_access">Allow Location Access</string>
</resources>