<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/options_header">

        <ListPreference
            app:defaultValue="METRIC"
            app:entries="@array/temp_scale_entries"
            app:entryValues="@array/temp_scale_values"
            app:key="@string/temp_scale_key"
            app:title="@string/temp_scale_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/daily_weather_notification_key"
            app:summaryOff="@string/daily_weather_summary_off"
            app:summaryOn="@string/daily_weather_summary_on"
            app:title="@string/daily_weather_notification_title" />

    </PreferenceCategory>

</PreferenceScreen>